quick fix for horizontal overflow

--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@ Green  #bcde15
 
 */
 
+html {
+    overflow-x: hidden;
+}
+
 body {
     padding: 0;
 }
